@@ -1,10 +1,10 @@
 package io.hexlet.blog.controller.api;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -13,6 +13,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -43,7 +44,7 @@ public class PostsController {
         var posts = repository.findAll();
         var result = posts.stream()
                 .map((post) -> mm.map(post, PostDTO.class))
-                .collect(Collectors.toList());
+        .toList();
 
         return ResponseEntity.ok()
                 .header("X-Total-Count", String.valueOf(posts.size()))
@@ -51,6 +52,7 @@ public class PostsController {
     }
 
     @PostMapping("/posts")
+    @ResponseStatus(HttpStatus.CREATED)
     PostDTO create(@Valid @RequestBody Post postData) throws JsonProcessingException {
         var post = new Post();
         post.setName(postData.getName());
